--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 * {
   color: rgb(0, 0, 0);
   font-family: "Times New Roman", sans-serif;
@@ -6,62 +7,88 @@
   box-sizing: border-box;
 }
 
+/* header */
+
+header {
+  background-color: #d7d7d7db;
+  margin: 10px;
+  padding: 5px;
+}
+
+
+#nome {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:xx-large;
+  font-weight: bolder;
+  text-align: center;
+  margin-left: 10px;
+  color: #30399b;
+}
+
+.slogan {
+  font-size: larger;
+  font-weight: bolder;
+  margin-left: 30px;
+}
+
+nav {
+  border: #5461f9;
+  border-style:inset;
+}
+
+li {
+  display: inline;
+  margin: 5px;
+}
+
+.nav {
+  color: #1221c3c5;
+  font-weight: bold;
+}
+
+
+/* main */
+main {
+  background-color: #d7d7d7db;
+  padding: 10px;
+  margin: 10px;
+}
 
 /* slideshow */
 
 .slideshow-container {
-  max-width: 1000px;
+  width: 60%;
+  height: 100%;
   position: relative;
   margin: auto;
 }
 
 .mySlides {
   display: none;
+  position: relative;
+
 }
 
-.prev.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color:white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+#tasca {
+display: block;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 4px;
+width: 50%;
 }
 
-.next {
-  right: 0px;
-  border-radius: 3px 0 0 3px;
-}
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover.next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
 
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
-  transition: background-color 0.6s ease;
+  transition: background-color 0.9s ease;
 }
 
 
@@ -78,4 +105,10 @@
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+footer {
+  background-color: #d7d7d7db;
+  padding: 10px;
+  margin: 10px;
 }
