--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,6 @@ width: 50%;
   background-color: #717171;
 }
 
-/* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
@@ -106,6 +105,8 @@ width: 50%;
   from {opacity: .4}
   to {opacity: 1}
 }
+
+/* footer */
 
 footer {
   background-color: #d7d7d7db;
