--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,9 @@
 
 header {
   background-color: #d7d7d7db;
-  margin: 10px;;
+  margin: 10px;
   padding: 5px;
+  margin-bottom: -10px;
 }
 
 .subtitle {
@@ -26,6 +27,7 @@ nav {
   border-style:inset;
   text-align: right;
   padding-right: 30px;
+  margin: 5px;
   
 }
 
@@ -45,6 +47,7 @@ main {
   background-color: #d7d7d7db;
   padding: 10px;
   margin: 10px;
+  margin-bottom: -10px;
 }
 
 .img-container {
