--- a/styles.css
+++ b/styles.css
@@ -10,20 +10,21 @@
 /* header */
 
 header {
-  background-color: #d7d7d7db;
+  background-color: #faa331a0;
   margin: 10px;
   padding: 5px;
   margin-bottom: -10px;
 }
 
 .subtitle {
-  color: #1221c3c5;
+  color: #110b03e1;
   font-size: larger;
   font-weight: bold;
 }
 
 nav {
-  border: #5461f9;
+  background-color: #faa331a0;
+  border: #744508a0;
   border-style:inset;
   text-align: right;
   padding-right: 30px;
@@ -37,14 +38,14 @@ li {
 }
 
 .nav {
-  color: #1221c3c5;
+  color: #251707b1;
   font-weight: bold;
 }
 
 
 /* main */
 main {
-  background-color: #d7d7d7db;
+  background-color: #faa331a0;
   padding: 10px;
   margin: 10px;
   margin-bottom: -10px;
@@ -56,6 +57,7 @@ main {
 }
 
 .nomecafe {
+  background: none;
   color: rgb(203, 203, 203);
   font-family: 'Courier New', Courier, monospace;
   font-size:36px;
@@ -66,10 +68,11 @@ main {
 }
 
 .slogan h5 {
+  background-color: none;
   text-align: center;
   font-size: x-large;
   font-weight: 700;
-  color: rgba(49, 48, 53, 0.876);
+  color: rgb(56, 33, 13);
 }
 
 .sobre {
@@ -80,8 +83,8 @@ main {
 
 .sobre .img-container .frame {
   position: relative;
-  border: 0px solid #1221c3c5;
-  background: #8d96f992;
+  border: 0px solid #c97d208a;
+  background: #c97d208a;
   margin-right: -10px;
   padding: 25px 10px;
 }
@@ -96,12 +99,12 @@ main {
   padding: 5px;
   margin-left: 10px;
   margin-bottom: 0px;
-  background-color: #8d96f992;
+  background-color: #c97d208a;
 }
 .sobre .text .subtitle {
   text-align: center;
   font-size: x-large;
-  background-color: rgba(169, 149, 247, 0.876);
+  background-color: #c97d208a;
   margin-left: -5px;
   margin-right: -5px;
   margin-top: -5px;
@@ -114,7 +117,7 @@ main {
 /* footer */
 
 footer {
-  background-color: #d7d7d7db;
+  background-color: #faa331a0;
   padding: 10px;
   margin: 10px;
   text-align: center;
