--- a/pages/menu/styles.css
+++ b/pages/menu/styles.css
@@ -45,7 +45,8 @@ main {
   background-color: #faa331a0;
   padding: 10px;
   margin: 10px;
-  margin-bottom: -10px;
+  margin-bottom: -12px;
+  padding-bottom: 25px;
 }
 
 .flex-container {
@@ -59,6 +60,10 @@ main {
   flex: auto;
 }
 
+.pratos-dia p {
+  font-size: 14px;
+}
+
 .menu-table-head {
   text-align: left;
   background-color: #faa331a0;
@@ -66,7 +71,15 @@ main {
 }
 
 td {
-  background-color: rgba(214, 146, 36, 0.135);
+  background-color: rgba(224, 146, 20, 0.229);
+  width: 33%;
+}
+
+.item {
+  width: 95%;
+}
+.preço {
+  text-align: center;
 }
 
 /* pratos-dia */
@@ -85,7 +98,7 @@ td {
 /* footer */
 
 footer {
-  background-color: #faa331a0;
+  background-color: #f19217d8;
   padding: 10px;
   margin: 10px;
   text-align: center;
