--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,9 @@ li {
 /* main */
 main {
   background-color: #faa331a0;
-  padding: 10px;
+  padding: 0px;
   margin: 10px;
-  margin-bottom: -10px;
+  margin-bottom: -12px;
 }
 
 .subtitle {
@@ -79,13 +79,14 @@ main {
   display: flex;
   padding: 3px;
   margin: -3px;
+  padding-bottom: 70px;
 }
 
 
 .sobre .img-container .frame {
   position: relative;
-  border: 0px solid #c97d208a;
-  background: #ec9a368a;
+  border: 0px solid #ec9a3653;
+  background: #ec9a3653;
   margin-right: -10px;
   padding: 27px 10px;
 }
@@ -99,12 +100,12 @@ main {
   padding: 5px;
   margin-left: 10px;
   margin-bottom: 0px;
-  background-color: #ec9a368a;
+  background-color: #ec9a3653;
 }
 .sobre .text .subtitle {
   text-align: center;
   font-size: x-large;
-  background-color: #d2790dcc;
+  background-color: #f19217d8;
   margin-left: -5px;
   margin-right: -5px;
   margin-top: -5px;
@@ -117,7 +118,7 @@ main {
 /* footer */
 
 footer {
-  background-color: #faa331a0;
+  background-color: #f19217d8;
   padding: 10px;
   margin: 10px;
   text-align: center;
