--- a/pages/menu/styles.css
+++ b/pages/menu/styles.css
@@ -49,6 +49,13 @@ main {
   padding-bottom: 25px;
 }
 
+img {
+  width: 80%;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.739);
+  margin: 10px;
+}
+
 .flex-container {
   display: flex;
   flex-direction: column;
