--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,8 @@ main {
 .sobre .img-container img {
   position: relative;
   width:90%;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.739);
 }
 .sobre .text {
   width: 100%;
