--- a/pages/menu/styles.css
+++ b/pages/menu/styles.css
@@ -65,6 +65,8 @@ img {
   border: 2px solid #341f03d6;
   border-style: dotted;
   flex: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;;
 }
 
 .pratos-dia p {
