--- a/pages/menu/styles.css
+++ b/pages/menu/styles.css
@@ -133,7 +133,7 @@ li
   
   }
 
-#nav-home,
+#nav-menu,
 #nav-sobre
   {
   display: none;
@@ -142,7 +142,7 @@ li
 .navlink 
   {
   margin: 3px;
-  font-size: 13px;
+  font-size: 12px;
   font-weight: bolder;
   }
 
