--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   font-family: "Times New Roman", sans-serif;
   font-size: 14px;
   font-weight: 500;
+  ;
 }
 
 /* header */
@@ -13,6 +14,7 @@ header {
   margin: 10px;
   padding: 5px;
   margin-bottom: -10px;
+  
 }
 
 .subtitle {
@@ -151,7 +153,7 @@ li
 .navlink 
   {
   margin: 3px;
-  font-size: 13px;
+  font-size: 12px;
   font-weight: bolder;
   }
 
