--- a/styles.css
+++ b/styles.css
@@ -130,30 +130,23 @@ footer {
 
 /* mobile */
 
-@media only screen and (max-width:900px) {
+@media only screen and (max-width:800px) {
 
 nav
   {
+  justify-content: center;
+  padding-right: 0%;
+  }
+
+ul 
+  {
+  padding-left: 0%;
   text-align: center;
-  margin: 0px;
-  }
-
-li
-  {
-  display:contents;
-  
-  }
-
-#nav-home,
-#nav-sobre
-  {
-  display: none;
   }
 
 .navlink 
   {
-  margin: 3px;
-  font-size: 12px;
+  font-size: 10px;
   font-weight: bolder;
   }
 
