--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
   ;
 }
 
+body {
+  background-color: #ffd39a;
+  margin: 0px;
+}
+
 /* header */
 
 header {
@@ -131,7 +136,7 @@ footer {
 
 /* mobile */
 
-@media only screen and (max-width:800px) {
+@media only screen and (max-width:480px) {
 
 nav
   {
