--- a/pages/menu/styles.css
+++ b/pages/menu/styles.css
@@ -15,7 +15,6 @@ body {
 
 header {
   background-color: #ffd39a;
-  margin: 10px;
   padding: 5px;
   margin-bottom: -10px;
   
@@ -114,7 +113,9 @@ td {
   text-align: center;
 }
 
-
+.iva {
+ padding-bottom: 40px; 
+}
 
 
 footer {
@@ -122,6 +123,7 @@ footer {
   padding: 10px;
   margin: 10px;
   margin-top: 12px;
+  margin-bottom: 0px;
   text-align: center;
 }
 
