--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
 
 header {
   background-color: #ffd39a;
-  margin: 10px;
   padding: 5px;
   margin-bottom: -10px;
   
@@ -130,6 +129,7 @@ footer {
   padding: 10px;
   margin: 10px;
   margin-top: 12px;
+  margin-bottom: 0px;
   text-align: center;
 }
 
