--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,8 @@ main {
 
 .sobre .text p {
   font-size: 20px;
-  text-align: justify;
   max-height: 650px;
+  text-align: center;
   overflow: auto;
   padding-left: 20px;
   padding-right: 20px;
