Minor style fixes

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ main {
   background-color: #ec9a3653;
   margin-right: -10px;
   flex-shrink: 1.5;
-  width: 60%
+  width: 60%;
 }
 
 .sobre .img-container img {
